--- a/src/locale/messages.es.xlf
+++ b/src/locale/messages.es.xlf
@@ -19,6 +19,7 @@
       </trans-unit>
       <trans-unit id="4430406418191731715" datatype="html">
         <source> Welcome to a social event organisation app designed to make planning and coordinating events easier for you and your friends! The simple interface makes it easy to create events, invite team members, and keep track of attendees. </source>
+        <target> Bienvenido a una aplicación de organización de eventos sociales diseñada para facilitar la planificación y coordinación de eventos para usted y sus amigos. La interfaz simple facilita la creación de eventos, la invitación de miembros del equipo y el seguimiento de los asistentes. </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/about/about.component.html</context>
           <context context-type="linenumber">8,12</context>
@@ -26,6 +27,7 @@
       </trans-unit>
       <trans-unit id="4923652942289479712" datatype="html">
         <source> With this app, you can also collect money from your team members to pay for events or venues using Stripe integration. No more chasing down payments or dealing with awkward money situations! </source>
+        <target> Con esta aplicación, también puede recaudar dinero de los miembros de su equipo para pagar eventos o lugares utilizando la integración de Stripe. ¡No más persecuciones de pagos o situaciones de dinero incómodas! </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/about/about.component.html</context>
           <context context-type="linenumber">13,16</context>
@@ -34,6 +36,8 @@
       <trans-unit id="7461268664902900341" datatype="html">
         <source> The app is developed by Alexander Zhidkov. Feel free to connect on <x id="START_LINK" ctype="x-a" equiv-text="&lt;a href=&quot;https://www.linkedin.com/in/azhidkov&quot;&gt;"/>LinkedIn<x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/a&gt;"/> or send me an <x id="START_LINK_1" equiv-text="&lt;a href=&quot;&quot;
                 (click)=&quot;openEmail()&quot;&gt;"/>email<x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/a&gt;"/>. </source>
+        <target> La aplicación está desarrollada por Alexander Zhidkov. No dude en conectarse en <x id="START_LINK" ctype="x-a" equiv-text="&lt;a href=&quot;https://www.linkedin.com/in/azhidkov&quot;&gt;"/>LinkedIn<x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/a&gt;"/> o envíeme un <x id="START_LINK_1" equiv-text="&lt;a href=&quot;&quot;
+                (click)=&quot;openEmail()&quot;&gt;"/>correo electrónico<x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/a&gt;"/>. </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/about/about.component.html</context>
           <context context-type="linenumber">17,21</context>
@@ -48,6 +52,7 @@
       </trans-unit>
       <trans-unit id="2343354099327403050" datatype="html">
         <source> Thank you for using the app and I hope it helps you plan some amazing social events with your friends! </source>
+        <target> ¡Gracias por usar la aplicación y espero que te ayude a planificar algunos eventos sociales increíbles con tus amigos! </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/about/about.component.html</context>
           <context context-type="linenumber">30,32</context>
